# rearranger

./: Cargo.toml  README.md
.github/workflows/: coverage.yaml
src/: cli.rs  db.rs  lib.rs  lines.rs  progress.rs  report.rs  session.rs
