[package]
name = "rearranger"
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
repository = "https://github.com/travisbrown/rearranger"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["derive", "string"] }
flate2 = "1"
futures = "0.3"
indicatif = "0.17"
itertools = "0.11"
rocksdb = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tempdir = "0.3"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
zstd = "0.12"
