[package]
name = "rearranger"
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
repository = "https://github.com/travisbrown/rearranger"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["derive", "string"] }
flate2 = "1"
futures = "0.3"
indicatif = "0.18"
itertools = "0.14"
rocksdb = { git = "https://github.com/rust-rocksdb/rust-rocksdb.git" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tempdir = "0.3"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
zstd = "0.13"
